@@ -60,20 +60,23 @@ import org.w3c.dom.ls.LSSerializer;
  * The Document interface represents the entire HTML or XML document.
  * Conceptually, it is the root of the document tree, and provides the
  * primary access to the document's data.
- * <P>
+ * <p>
  * Since elements, text nodes, comments, processing instructions,
  * etc. cannot exist outside the context of a Document, the Document
  * interface also contains the factory methods needed to create these
  * objects. The Node objects created have a ownerDocument attribute
  * which associates them with the Document within whose context they
  * were created.
+ * </p>
  * <p>
  * The CoreDocumentImpl class only implements the DOM Core. Additional modules
  * are supported by the more complete DocumentImpl subclass.
+ * </p>
  * <p>
  * <b>Note:</b> When any node in the document is serialized, the
  * entire document is serialized along with it.
- * 
+ * </p>
+ *
  * @xerces.internal 
  *
  * @author Arnaud  Le Hors, IBM
@@ -309,8 +312,8 @@ extends ParentNode implements Document  {
      * protection. I've chosen to implement it by calling importNode
      * which is DOM Level 2.
      *
-     * @return org.w3c.dom.Node
      * @param deep boolean, iff true replicate children
+     * @return a clone of this {@link org.w3c.dom.Node}
      */
     public Node cloneNode(boolean deep) {
 
@@ -548,8 +551,7 @@ extends ParentNode implements Document  {
      * @param name The name of the attribute. Note that the attribute's value is
      * _not_ established at the factory; remember to set it!
      * 
-     * @throws DOMException(INVALID_NAME_ERR)
-     * if the attribute name is not acceptable.
+     * @throws DOMException INVALID_NAME_ERR if the attribute name is not acceptable.
      */
     public Attr createAttribute(String name)
         throws DOMException {
@@ -572,8 +574,8 @@ extends ParentNode implements Document  {
      *
      * @param data The initial contents of the CDATA
      *
-     * @throws DOMException(NOT_SUPPORTED_ERR) for HTML documents. (HTML
-     * not yet implemented.)
+     * @throws DOMException NOT_SUPPORTED_ERR for HTML documents.
+     *         (HTML not yet implemented)
      */
     public CDATASection createCDATASection(String data)
     throws DOMException {
@@ -606,8 +608,7 @@ extends ParentNode implements Document  {
      * be provided in any case, but it must be mapped to the canonical
      * uppercase form by the DOM implementation.
      *
-     * @throws DOMException(INVALID_NAME_ERR) if the tag name is not
-     * acceptable.
+     * @throws DOMException INVALID_NAME_ERR if the tag name is not acceptable
      */
     public Element createElement(String tagName)
     throws DOMException {
@@ -626,7 +627,7 @@ extends ParentNode implements Document  {
      *
      * @param name The name of the Entity we wish to refer to
      *
-     * @throws DOMException(NOT_SUPPORTED_ERR) for HTML documents, where
+     * @throws DOMException NOT_SUPPORTED_ERR for HTML documents, where
      * nonstandard entities are not permitted. (HTML not yet
      * implemented.)
      */
@@ -648,11 +649,10 @@ extends ParentNode implements Document  {
      * @param target The target "processor channel"
      * @param data Parameter string to be passed to the target.
      *
-     * @throws DOMException(INVALID_NAME_ERR) if the target name is not
-     * acceptable.
+     * @throws DOMException INVALID_NAME_ERR if the target name is not acceptable.
      *
-     * @throws DOMException(NOT_SUPPORTED_ERR) for HTML documents. (HTML
-     * not yet implemented.)
+     * @throws DOMException NOT_SUPPORTED_ERR for HTML documents.
+     *          (HTML not yet implemented.)
      */
     public ProcessingInstruction createProcessingInstruction(String target,
     String data)
@@ -696,9 +696,11 @@ extends ParentNode implements Document  {
      * which is considered the root of the actual document content. For
      * HTML, where it is legal to have more than one Element at the top
      * level of the document, we pick the one with the tagName
-     * "HTML". For XML there should be only one top-level
+     * "HTML". For XML there should be only one top-level.
      *
-     * (HTML not yet supported.)
+     * <p>(HTML not yet supported.)</p>
+     *
+     * @return the root document element
      */
     public Element getDocumentElement() {
         if (needsSyncChildren()) {
@@ -825,6 +827,7 @@ extends ParentNode implements Document  {
      * compatibility with older applications. New applications
      * should never call this method.
      */
+    @Deprecated
     public void setEncoding(String value) {
         setXmlEncoding(value);
     }
@@ -842,6 +845,7 @@ extends ParentNode implements Document  {
      * compatibility with older applications. New applications
      * should never call this method.
      */
+    @Deprecated
     public String getEncoding() {
         return getXmlEncoding();
     }
@@ -883,6 +887,7 @@ extends ParentNode implements Document  {
      * compatibility with older applications. New applications
      * should never call this method.
      */
+    @Deprecated
     public void setVersion(String value) {
         setXmlVersion(value);
     }
@@ -900,6 +905,7 @@ extends ParentNode implements Document  {
      * compatibility with older applications. New applications
      * should never call this method.
      */
+    @Deprecated
     public String getVersion() {
         return getXmlVersion();
     }
@@ -924,6 +930,7 @@ extends ParentNode implements Document  {
      * compatibility with older applications. New applications
      * should never call this method.
      */
+    @Deprecated
     public void setStandalone(boolean value) {
         setXmlStandalone(value);
     }
@@ -942,6 +949,7 @@ extends ParentNode implements Document  {
      * compatibility with older applications. New applications
      * should never call this method.
      */
+    @Deprecated
     public boolean getStandalone() {
         return getXmlStandalone();
     }
@@ -959,14 +967,19 @@ extends ParentNode implements Document  {
     }
 
 
-    /* NON-DOM
-     * Used by DOM Level 3 WD remameNode.
-     * 
+    /**
+     * NON-DOM
+     * Used by DOM Level 3 WD {@link #renameNode(Node, String, String)}.
+     * <p>
      * Some DOM implementations do not allow nodes to be renamed and require 
      * creating new elements.
      * In this case this method should be overwritten.
-     * 
-     * @return true if the given element can be renamed, false, if it must be replaced.
+     * </p>
+     *
+     * @param newNamespaceURI the new namespace URI
+     * @param newNodeName the new noe name
+     * @param el a {@link ElementImpl} to check
+     * @return true if the given element can be renamed, false, if it must be replaced
      */
     protected boolean canRenameElements(String newNamespaceURI, String newNodeName, ElementImpl el) {
         return true;
@@ -975,6 +988,11 @@ extends ParentNode implements Document  {
     /**
      * DOM Level 3 WD - Experimental.
      * Renaming node
+     *
+     * @param n the node to rename
+     * @param namespaceURI the new namespace URI
+     * @param name the new noe name
+     * @return the renamed node. This is either the specified node or the new node that was created to replace the specified node.
      */
     public Node renameNode(Node n,String namespaceURI,String name)
     throws DOMException{
@@ -1368,7 +1386,7 @@ extends ParentNode implements Document  {
      * @param publicID
      * @param systemID
      *
-     * @throws DOMException(NOT_SUPPORTED_ERR) for HTML documents, where
+     * @throws DOMException NOT_SUPPORTED_ERR for HTML documents, where
      * DTDs are not permitted. (HTML not yet implemented.)
      */
     public DocumentType createDocumentType(String qualifiedName,
@@ -1388,9 +1406,8 @@ extends ParentNode implements Document  {
      *
      * @param name The name of the Entity we wish to provide a value for.
      *
-     * @throws DOMException(NOT_SUPPORTED_ERR) for HTML documents, where
-     * nonstandard entities are not permitted. (HTML not yet
-     * implemented.)
+     * @throws DOMException NOT_SUPPORTED_ERR for HTML documents, where
+     * nonstandard entities are not permitted. (HTML not yet implemented.)
      */
     public Entity createEntity(String name)
     throws DOMException {
@@ -1412,9 +1429,8 @@ extends ParentNode implements Document  {
      *
      * @param name The name of the Notation we wish to describe
      *
-     * @throws DOMException(NOT_SUPPORTED_ERR) for HTML documents, where
-     * notations are not permitted. (HTML not yet
-     * implemented.)
+     * @throws DOMException NOT_SUPPORTED_ERR for HTML documents, where
+     * notations are not permitted. (HTML not yet implemented.)
      */
     public Notation createNotation(String name)
     throws DOMException {
@@ -1471,13 +1487,13 @@ extends ParentNode implements Document  {
         if (nodeTable == null) {
             nodeTable = new WeakHashMap();
             num = --nodeCounter;
-            nodeTable.put(node, new Integer(num));
+            nodeTable.put(node, Integer.valueOf(num));
         }
         else {
             Integer n = (Integer)nodeTable.get(node);
             if (n== null) {
                 num = --nodeCounter;
-                nodeTable.put(node, new Integer(num));
+                nodeTable.put(node, Integer.valueOf(num));
             }
             else
                 num = n.intValue();
@@ -2115,7 +2131,7 @@ extends ParentNode implements Document  {
      * @param localpart  The local name of the attribute to instantiate.
      *
      * @return Element A new Element object with the following attributes:
-     * @exception DOMException INVALID_CHARACTER_ERR: Raised if the specified
+     * @throws DOMException INVALID_CHARACTER_ERR: Raised if the specified
      *                   name contains an invalid character.
      */
     public Element createElementNS(String namespaceURI, String qualifiedName,
