@@ -200,7 +200,7 @@ public class XMLEntityManager
         null,
         null,
         null,
-        new Integer(DEFAULT_BUFFER_SIZE),
+        Integer.valueOf(DEFAULT_BUFFER_SIZE),
         null,
     };
 
@@ -953,7 +953,7 @@ public class XMLEntityManager
             if (fEntityExpansionCount++ > fEntityExpansionLimit) {
                 fErrorReporter.reportError(XMLMessageFormatter.XML_DOMAIN,
                         "EntityExpansionLimitExceeded",
-                        new Object[]{new Integer(fEntityExpansionLimit) },
+                        new Object[]{Integer.valueOf(fEntityExpansionLimit) },
                         XMLErrorReporter.SEVERITY_FATAL_ERROR );
                 // is there anything better to do than reset the counter?
                 // at least one can envision debugging applications where this might
@@ -1288,20 +1288,6 @@ public class XMLEntityManager
     // XMLComponent methods
     //
 
-    /**
-     * Resets the component. The component can query the component manager
-     * about any features and properties that affect the operation of the
-     * component.
-     *
-     * @param componentManager The component manager.
-     *
-     * @throws SAXException Thrown by component on initialization error.
-     *                      For example, if a feature or property is
-     *                      required for the operation of the component, the
-     *                      component manager may throw a
-     *                      SAXNotRecognizedException or a
-     *                      SAXNotSupportedException.
-     */
     public void reset(XMLComponentManager componentManager)
         throws XMLConfigurationException {
         	
@@ -1464,10 +1450,7 @@ public class XMLEntityManager
      * @param featureId The feature identifier.
      * @param state     The state of the feature.
      *
-     * @throws SAXNotRecognizedException The component should not throw
-     *                                   this exception.
-     * @throws SAXNotSupportedException The component should not throw
-     *                                  this exception.
+     * @throws XMLConfigurationException when a feature is not recognized or cannot be set
      */
     public void setFeature(String featureId, boolean state)
         throws XMLConfigurationException {
@@ -1502,10 +1485,7 @@ public class XMLEntityManager
      * @param propertyId The property identifier.
      * @param value      The value of the property.
      *
-     * @throws SAXNotRecognizedException The component should not throw
-     *                                   this exception.
-     * @throws SAXNotSupportedException The component should not throw
-     *                                  this exception.
+     * @throws XMLConfigurationException when a property is not recognized or cannot be set
      */
     public void setProperty(String propertyId, Object value)
         throws XMLConfigurationException {
